# simple-bus-pay-card

./: README.md  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/src/backend/: main.py
backend/src/backend/api/v1/: api.py
backend/src/backend/api/v1/endpoints/: cards.py  hello.py
backend/src/backend/database/: database.py  model.py  schema.py
docker-scripts/: local-database.sql
frontend/: Dockerfile  package.json
frontend/src/: App.js  index.js  setupProxy.js  travel.jsx
