[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["marcio"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.63.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}

[tool.poetry.scripts]
backend = "backend.main:main"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
