[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["marcio"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "0.63.0"
uvicorn = {extras = ["standard"], version = "^0.14.0"}
SQLAlchemy = "^1.4.22"
pydantic = "^1.8.2"
psycopg2-binary = "^2.9.1"

[tool.poetry.scripts]
backend = "backend.main:main"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
